--- a/src/main/webapp/resources/board_write.html
+++ b/src/main/webapp/resources/board_write.html
@@ -126,55 +126,48 @@
 					</div>
 					<!-- /.row -->
 
-					<div class="col-md-12">
-						<!-- general form elements disabled -->
-						<div class="card card-warning">
-							<div class="card-header">
-								<h3 class="card-title">General Elements</h3>
-							</div>
-							<!-- /.card-header -->
-							<div class="card-body">
-								<form role="form">
-									<div class="row">
-										<div class="col-sm-6">
-											<!-- text input -->
-											<div class="form-group">
-												<label>아이디</label> <input type="text" class="form-control"
-													placeholder="Enter ...">
-											</div>
-										</div>
-										<div class="col-sm-6">
-											<div class="form-group">
-												<label>암호</label> <input type="text"
-													class="form-control" placeholder="Enter ...">
-											</div>
-										</div>
-									</div><!-- //end row -->
-									<div class="row">
-										<div class="col-sm-6">
-											<!-- text input -->
-											<div class="form-group">
-												<label>이름</label> <input type="text" class="form-control"
-													placeholder="Enter ...">
-											</div>
-										</div>
-										<div class="col-sm-6">
-											<div class="form-group">
-												<label>이메일</label> <input type="text"
-													class="form-control" placeholder="Enter ...">
-											</div>
-										</div>
-									</div><!-- //end row -->
-									<div class="row">
-										<button type="submit" class="btn btn-block btn-info">회원등록</button>
-											</div>
-										</div>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
+				<div class="box box-primary">
+            <div class="box-header with-border">
+              <h3 class="box-title">Quick Example</h3>
+            </div>
+            <!-- /.box-header -->
+            <!-- form start -->
+            <form role="form">
+              <div class="box-body">
+                <div class="form-group">
+                  <label for="exampleInputEmail1">Title</label>
+                  <input type="Enter Title" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Content</label>
+                  <input type="Enter" class="form-control" id="exampleInputPassword1" row=3 placeholder="Password">
+                  
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Writer</label>
+                  <input type="Enter Writer" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputFile">File input</label>
+                  <input type="file" id="exampleInputFile">
 
+                  <p class="help-block">Example block-level help text here.</p>
+                </div>
+                <div class="checkbox">
+                  <label>
+                    <input type="checkbox"> Check me out
+                  </label>
+                </div>
+              </div>
+              <!-- /.box-body -->
+
+              <div class="box-footer">
+                <button type="submit" class="btn btn btn-warning">submit</button>
+                <button type="List All" class="btn btn-primary">List All</button>
+              </div>
+              
+            </form>
+          </div>
 
 
 
