--- a/src/main/webapp/resources/member_write.html
+++ b/src/main/webapp/resources/member_write.html
@@ -207,7 +207,7 @@
 		</aside>
 		<!-- /.control-sidebar -->
 
-		<!-- Main Footer -->
+		<!-- ,/content wrapper -->
 		<footer class="main-footer">
 			<!-- To the right -->
 			<div class="float-right d-none d-sm-inline">Anything you want</div>
