--- a/src/main/webapp/resources/home/notice_view.html
+++ b/src/main/webapp/resources/home/notice_view.html
@@ -23,6 +23,7 @@
 <div id="wrap">
 
 	<header id="header">
+	
 		<div class="header_area box_inner clear">	
 			<h1><a href="javascript:;">스프링 in 자바</a></h1>
 			<p class="openMOgnb"><a href="#"><b class="hdd">메뉴열기</b> <span></span><span></span><span></span></a></p>
@@ -74,7 +75,7 @@
 			<!-- //header_cont -->
 		</div>
 	</header>
-	
+	<!-- container -->
 	<div id="container">
 		<!-- location_area -->
 		<div class="location_area customer">
