사용자단 게시판 CRUD 마무리

--- a/src/main/webapp/resources/board_list.html
+++ b/src/main/webapp/resources/board_list.html
@@ -89,13 +89,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="#" class="nav-link active">
+                <a href="/admin/board/list" class="nav-link active">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>관리자 관리</p>
+                  <p>회원 관리</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="/admin/board/list" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>게시물 관리</p>
                 </a>
@@ -134,7 +134,7 @@
                 </div>
                 </div>
                 <div class="col-1" style="display:inline-block" >
-                        <select class="form-control">
+                        <select id="searchType" class="form-control">
                           <option>--</option>
                         </select>
                         </div>
@@ -224,14 +224,13 @@
  
     
     </div>
-    <!-- Content Wrapper. Contains page content -->
+   <!-- ./Content Wrapper. Contains page content -->
 
   <!-- Main content -->  
-	<div class="content">
-
-	</div>
-	<!-- .content  -->
-
+   <div class="content">
+   
+   </div>
+   <!-- .content  -->
 
   <!-- Control Sidebar -->
   <aside class="control-sidebar control-sidebar-dark">
@@ -253,7 +252,6 @@
     <!-- Default to the left -->
     <strong>Copyright &copy; 2014-2020 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
   </footer>
-
 </div>
 <!-- ./wrapper -->
 
@@ -265,6 +263,31 @@
 <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
 <script src="dist/js/adminlte.min.js"></script>
+
+<script>
+//==========고전적인 자바스크립트 방식 ===================//
+function myFunc() {   //function 함수이름(){ }
+   alert('테스트');
+   $(".btn-primary").css({"background-color":"black"});
+}
+myFunc();//함수호출(콜)==실행
+//============JQuery 스크립트 방식 ===============//
+$(document).ready(function(){//함수명 없이 실행 콜백 함수.
+   alert('테스트2');
+   var cnt = 131;
+   $(".btn-primary").bind("click",function(event){
+      $("<tr><td>"+cnt+"</td><td>한줄추가</td><td>내용추가</td><td>2020.07.15</td><td>100</td></tr>").prependTo("table")
+      cnt = cnt + 1;
+   });
+   //$("table thead tr").css({"background-color":"skyblue"});
+   //$("#searchType").css({"width":"150px"});//제이쿼리 JS
+   //document.getElementById("searchType").width="200px";//오리지널 JS
+   //$(".btn-primary").css({})
+   //$("tr").css("background","red");
+   //$("tr").css({"background-color":"pink","color":"purple"});
+});
+//========================//
+</script>
 
 </body>
 </html>
