--- a/src/main/webapp/resources/board_list.html
+++ b/src/main/webapp/resources/board_list.html
@@ -89,13 +89,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="/admin/board/list" class="nav-link active">
+                <a href="#" class="nav-link active">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>회원 관리</p>
+                  <p>관리자 관리</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="/admin/board/list" class="nav-link">
+                <a href="#" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>게시물 관리</p>
                 </a>
@@ -166,7 +166,7 @@
               </div>
               <!-- /.card-header -->
               <div class="card-body table-responsive p-0">
-                <table class="table table-hover text-nowrap">
+                <table class="table table-hover text-nowrap even_table">
                   <thead>
                     <tr>
                       <th>BNO</th>
@@ -176,7 +176,7 @@
                       <th>VIEWCNT</th>
                     </tr>
                   </thead>
-                  <tbody>
+                  <tbody class="even_color">
                     <tr>
                       <td>130</td>
                       <td>홈페이지 오픈 테스트</td>
@@ -206,6 +206,9 @@
                       <td><span class="badge badge-danger right">0</span></td>
                       </tr>
                   </tbody>
+                 </table>
+                 <table class="table table-hover text-nowrap">
+                  <tr>
             <td> <button type="submit" class="btn btn-primary">CREATE</button>
                </td>
            <td>
@@ -215,6 +218,7 @@
             </ul>
           </nav>
                </td>
+               </tr>
                 </table>
               </div>
               <!-- /.card-body -->
@@ -224,13 +228,14 @@
  
     
     </div>
-   <!-- ./Content Wrapper. Contains page content -->
+    <!-- /Content Wrapper. Contains page content -->
 
   <!-- Main content -->  
    <div class="content">
-   
+
    </div>
    <!-- .content  -->
+
 
   <!-- Control Sidebar -->
   <aside class="control-sidebar control-sidebar-dark">
@@ -252,6 +257,7 @@
     <!-- Default to the left -->
     <strong>Copyright &copy; 2014-2020 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
   </footer>
+
 </div>
 <!-- ./wrapper -->
 
@@ -263,31 +269,38 @@
 <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
 <script src="dist/js/adminlte.min.js"></script>
-
 <script>
-//==========고전적인 자바스크립트 방식 ===================//
-function myFunc() {   //function 함수이름(){ }
+//---------고전적인자바스크립트방식-----//
+function myFunc() {//function 함수이름 () { }
    alert('테스트');
-   $(".btn-primary").css({"background-color":"black"});
+   
 }
-myFunc();//함수호출(콜)==실행
-//============JQuery 스크립트 방식 ===============//
+myFunc();//함수호출==실행
+//--------jquery스크립트방식---------->
 $(document).ready(function(){//함수명 없이 실행 콜백 함수.
    alert('테스트2');
+   $(".even_table tbody tr:even").css({"background-color":"black","color":"white"});
    var cnt = 131;
    $(".btn-primary").bind("click",function(event){
-      $("<tr><td>"+cnt+"</td><td>한줄추가</td><td>내용추가</td><td>2020.07.15</td><td>100</td></tr>").prependTo("table")
-      cnt = cnt + 1;
+      $(".even_table tbody tr").each(function(index,item){
+         $(item).addClass("hong" + index); //class="hong_0","hong_1"
+      })
+      //$("<tr><td>"+cnt+"</td><td>한줄추가</td><td>내용추가</td><td>2020.07.15</td><td>100</td></tr>").prependTo(".even_table tbody");
+      //cnt = cnt + 1;
    });
+   
    //$("table thead tr").css({"background-color":"skyblue"});
-   //$("#searchType").css({"width":"150px"});//제이쿼리 JS
-   //document.getElementById("searchType").width="200px";//오리지널 JS
-   //$(".btn-primary").css({})
+   //$("#searchType").css({"width":"150px"});//제이쿼리용 자바스크립트
+   //document.getElementById("searchType").style.width="200px";//오리지널 자바스크립트
+   //$(".btn-primary").css({"background-color":"red"});
    //$("tr").css("background","red");
-   //$("tr").css({"background-color":"pink","color":"purple"});
+   //$("tr").css({"background":"red","color":"blue"});
 });
-//========================//
+//==========================//
+//   function myFunc() {//콜백함수 호출없이 실행
+   //alert('테스트2');   
+//}
+   
 </script>
-
 </body>
 </html>
